--- a/README.org
+++ b/README.org
@@ -1,6 +1,22 @@
-#+title: How does this show up in readme?
-
 * Pre-IB computer science project
-   | column       | another |
-   |--------------+---------|
-   | testing some | tables  |
+** Short overview
+   - The project allows you to increase your final grade by a maximum
+     of 3 grades.
+   - The program you write must process text data in a meaningful way,
+     but the end result does not have to be a real-life application.
+   - Grading is based on
+     - problem specification
+     - program correctness
+     - readability of code.
+   - Your submission consists of
+     - one document with problem specification and description of test
+       cases
+     - one ~.java~-file containing the code
+     - possibly one or more data files.
+** Grading levels
+*** One
+**** Specification
+     There is a sensible specification of what the program does.
+**** Correctness
+     The program works correctly in three documented test cases.
+     - First is a basic case 
