* comments\n* improved identifier naming

--- a/README.org
+++ b/README.org
@@ -70,7 +70,7 @@
       import java.io.FileReader;
       import java.util.Scanner;
 
-      class NamesakeFinder
+      class NamesakeListing
       {
         public static void main (String[] args)
         {
@@ -88,9 +88,11 @@
           int numPersons = readPersons (filename, persons);
 
           // list namesakes
-          listNamesakes (persons, numPersons);
+          printNamesakes (persons, numPersons);
         }
 
+        // query the user for the name of data file; return value is the
+        // name of the file
         static String queryFilename ()
         {
           String filename;
@@ -101,7 +103,7 @@
           }
           catch (Exception e)
           {
-            System.out.println ("unable to read data file name, exception " + e);
+            System.out.println ("unable to read data file name, exception: " + e);
             filename = "";
             System.exit (-1);
           }
@@ -109,15 +111,20 @@
           return filename;
         }
 
+        // read persons from data file with given file name into the
+        // supplied array; return value is the number of persons in the data
+        // file
         static int readPersons (String filename, Person[] persons)
         {
           int numPersons = 0;
+
           // open file and create a scanner for it
           try (FileReader dataFileReader = new FileReader (new File (filename));
                Scanner scanner = new Scanner (dataFileReader))
           {
             try
             {
+              // read while there are lines in the file
               while (scanner.hasNextLine ())
               {
                 if (numPersons > persons.length)
@@ -126,9 +133,11 @@
                   System.exit (-1);
                 }
 
+                // each line has last name, first name, address
                 String lastname = scanner.next ();
                 String firstname = scanner.next ();
-                String address = scanner.nextLine ();
+                String address = scanner.nextLine (); // address is the rest of the line
+
                 persons [numPersons] = new Person (lastname, firstname, address);
                 numPersons = numPersons + 1;
               }
@@ -148,21 +157,29 @@
           return numPersons;
         }
 
-        static void listNamesakes (Person[] persons, int numPersons)
+        // print the persons as groups of namesakes
+        static void printNamesakes (Person[] persons, int numPersons)
         {
+          // go through the persons
           for (int personInd = 0; personInd < numPersons; personInd = personInd + 1)
           {
             Person person = persons [personInd];
+
+            // if the person has not been printed yet, print the person and
+            // the possible namesakes
             if (person != null)
             {
               System.out.println (person);
-              for (int namesakeInd = personInd + 1; namesakeInd < numPersons; namesakeInd = namesakeInd + 1)
+
+              // go through namesake candidates, starting from the next
+              // person
+              for (int candInd = personInd + 1; candInd < numPersons; candInd = candInd + 1)
               {
-                Person namesakeCandidate = persons [namesakeInd];
-                if (namesakeCandidate != null && person.isNamesake (namesakeCandidate))
+                Person candidate = persons [candInd];
+                if (candidate != null && person.isNamesake (candidate))
                 {
-                  System.out.println (namesakeCandidate);
-                  persons [namesakeInd] = null;
+                  System.out.println (candidate);
+                  persons [candInd] = null;
                 }
               }
             }
