--- a/README.org
+++ b/README.org
@@ -90,19 +90,21 @@
       of namesakes. The number of persons in these groups is 3
       (Michael), 2 (Jane) and 1. When the program is run with
       #+name: run-application
-      #+begin_src sh :exports both :cache yes :results output verbatim
+      #+begin_src sh :exports both :cache no :results output verbatim
       java NamesakeListing.java persons.txt
       #+end_src
 
       the output is
 
-      #+RESULTS[b4156db474e32f93ea042c3aa520add6b196782c]: run-application
+      #+RESULTS: run-application
       : Money Michael  Las Vegas US
       : Liberite Michael  Paris France
       : Anonymous Michael  Whereever
       : Different Firstname  Finland
       : Doe Jane  Aberdeen Scotland
       : Some Jane  Missing in action
+
+
 
 *** Code
     #+begin_src java :exports code :tangle NamesakeListing.java
